k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  selector:
    app: go-api
  ports:
    - port: 80
      targetPort: 8080
