k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "devtalentsmatcher.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-service
            port:
              number: 80
  tls:
    - hosts:
      - devtalentsmatcher.com
      secretName: updated-golang-secret
